@@ -1,3 +1,10 @@
+2013-11-04  Sergio Martin <sergio.martin@artica.es>
+
+	* include/functions_groups.php: Fixed function that
+	returns the user groups in tree way. It was broken
+	when the user has acls over a group but not in his
+	father. Incident: #342
+
 2013-10-29 Miguel de Dios <miguel.dedios@artica.es>
 	
 	* include/functions_agents.php: fixed the delete the nodes in the
